# iris

./: .gitignore  AGENTIC_SKILLS_PLAN.md  AGENTS.md  BLINK_ASSISTANT_README.md  CLAUDE.md  CONTINUOUS_BUILD_SUMMARY.md  ICOI_IMPLEMENTATION_PLAN.md  ICOI_LAYOUTS.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PHASE_10_SUMMARY.md  PHASE_5_SUMMARY.md  PHASE_CHECKLIST.md  PROPOSITION.md  Package.swift  QUICK_REFERENCE.md  README.md  SECURITY.md  add_public_inits.sh  build_and_install.sh  build_dev.sh  calibrate.py  calibrate_gaze.py  check_calibration.py  check_vision.swift  create_app_bundle.sh  create_app_bundle_debug.sh  debug_eye_tracking.py  debug_screens.swift  eye_tracker.py  gaze_model.pkl  hot_reload.sh  inspect_vision.swift  launch_iris.sh  measure_range.py  monitor_latency.py  monitor_performance.sh  profile_memory.py  reflect_vision.swift  run.sh  (+9 more)
IRIS/: ContentView.swift  IRIS.entitlements  IRISApp.swift  Info.plist
docs/: ARCHITECTURE.md  TESTING.md
gaze_env/: pyvenv.cfg
iris-gaze-rs/: Cargo.toml  build.rs  cbindgen.toml
iris-gaze-rs/include/: iris_gaze.h
iris-gaze-rs/mediapipe/: README.md  mediapipe_bridge.cc  mediapipe_bridge.h
iris-gaze-rs/models/: face_mesh_192x192_fixed.onnx  face_mesh_simple.onnx
iris-gaze-rs/scripts/: face_mesh_server.py
iris-gaze-rs/src/: blink.rs  camera.rs  face_mesh.rs  gaze.rs  lib.rs  mediapipe.rs  python_face_mesh.rs  test_onnx.rs  types.rs
landing/: package-lock.json  package.json
scripts/: README.md  VERIFICATION_GUIDE.md  build_verify.sh  memory_check.sh  performance_check.sh  setup_api_key.sh  (+3 more)
(+159 files in other folders)
